# codex-veritas

./: .dockerignore  .gitignore  Dockerfile  MOCK_LANDING_PAGE.md  README.md  agent.Dockerfile  code_graph.json  pyproject.toml  self_analysis.json  self_report.md  temp_run.sh
.github/workflows/: ci.yml
src/codex/: mission_control.py
src/codex/agent/: core.py  git_tools.py  github_tools.py  main.py  memory.py  new_feature.py  task.py  tools.py
src/codex/cli/: main.py
src/codex/graph/: core.py
src/codex/ingestion/: main.py  parser.py
src/codex/query/: engine.py
src/codex/report/: generator.py  ranking.py
src/codex/semantic/: indexer.py
src/codex/webapp/: api.py  main.py  worker.py
src/codex/webapp/static/: main.js  style.css
src/codex/webapp/templates/: index.html  report.html
src/codex_veritas/: cli.py
src/codex_veritas/agent/: engine.py  tools.py
src/codex_veritas/analysis/: ast_parser.py  semantic_layer.py
src/codex_veritas/app/: main.py
src/codex_veritas/app/templates/: index.html
src/reports/: c736f158-b545-429b-b106-59d4e576e2d8.md
tasks/: 140007e9-96d7-49c4-b753-919d6bd35e0a.json  7d54c3bb-3df0-42d7-9cc3-e5e149a8e40a.json  91c7047d-41ee-41d7-8a62-c1e34edc387f.json  ca88045a-bd77-4e46-b408-e08adbffee81.json  d55e0bc1-1a7c-4b4c-bc3b-f17db61b316b.json  de3c38d0-b2b5-4cba-bd35-d249b0f87866.json  e114433c-9f40-4785-884a-7f2b1d38ddab.json  e81877a1-8b23-4d76-b107-fb618a204691.json
tests/: test_graph.py  test_placeholder.py
