[tool.poetry]
name = "codex-veritas"
version = "0.1.0"
description = "An AI software engineering platform built on the principle of Structural Honesty."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "codex_veritas", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"  # --- Stricter Python version to match tree-sitter ---
typer = "^0.12.3"
google-generativeai = "^0.5.4"
python-dotenv = "^1.0.1"
pydantic = "^2.7.4"
# --- Exact versions known to be compatible ---
tree-sitter = "0.21.0"
tree-sitter-languages = "1.9.1"
chromadb = "^0.5.0"
sentence-transformers = "^3.0.1"
networkx = "^3.3"
streamlit = "^1.37.0"
flask = "^3.0.3"
# --- FIXED HERE: Added the missing dependency for session management ---
Flask-Session = "^0.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
codex = "codex_veritas.cli:app"

